--- a/CameraTracking.qsf
+++ b/CameraTracking.qsf
@@ -604,4 +604,5 @@ set_global_assignment -name VHDL_FILE vga_driver.vhd
 set_global_assignment -name VHDL_FILE clock1.vhd
 set_global_assignment -name VHDL_FILE CameraTracking.vhd
 set_global_assignment -name CDF_FILE Chain1.cdf
+set_global_assignment -name VHDL_FILE servo.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
