--- a/CameraTracking.qsf
+++ b/CameraTracking.qsf
@@ -598,6 +598,7 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity vga -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity FinalProject -section_id Top
+set_global_assignment -name VHDL_FILE TwoPortRam.vhd
 set_global_assignment -name VHDL_FILE hexDisplay.vhd
 set_global_assignment -name VHDL_FILE ir_receiver.vhd
 set_global_assignment -name VHDL_FILE vga_driver.vhd
@@ -605,4 +606,5 @@ set_global_assignment -name VHDL_FILE clock1.vhd
 set_global_assignment -name VHDL_FILE CameraTracking.vhd
 set_global_assignment -name CDF_FILE Chain1.cdf
 set_global_assignment -name VHDL_FILE servo.vhd
+set_global_assignment -name QIP_FILE TwoPortRam.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
