--- a/CameraTracking.qsf
+++ b/CameraTracking.qsf
@@ -37,7 +37,7 @@
 
 
 set_global_assignment -name FAMILY "Cyclone IV E"
-set_global_assignment -name DEVICE EP4CE115F29C8
+set_global_assignment -name DEVICE EP4CE115F29C7
 set_global_assignment -name TOP_LEVEL_ENTITY CameraTracking
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:11:26  OCTOBER 18, 2013"
@@ -45,7 +45,7 @@ set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
+set_global_assignment -name DEVICE_FILTER_PACKAGE FPGA
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 780
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 7
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
@@ -598,6 +598,57 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity vga -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity FinalProject -section_id Top
+set_location_assignment PIN_J10 -to EX_IO[0]
+set_location_assignment PIN_J14 -to EX_IO[1]
+set_location_assignment PIN_H13 -to EX_IO[2]
+set_location_assignment PIN_H14 -to EX_IO[3]
+set_location_assignment PIN_F14 -to EX_IO[4]
+set_location_assignment PIN_E10 -to EX_IO[5]
+set_location_assignment PIN_D9 -to EX_IO[6]
+set_location_assignment PIN_G6 -to PS2_CLK
+set_location_assignment PIN_H5 -to PS2_DAT
+set_location_assignment PIN_G5 -to PS2_CLK2
+set_location_assignment PIN_F5 -to PS2_DAT2
+set_location_assignment PIN_C19 -to ENET0_RST_N
+set_location_assignment PIN_D22 -to ENET1_RST_N
+set_location_assignment PIN_B3 -to OTG_RD_N
+set_location_assignment PIN_AE11 -to FL_RST_N
+set_location_assignment PIN_AB22 -to D5M_PIXLCLK
+set_location_assignment PIN_AC15 -to D5M_D[11]
+set_location_assignment PIN_Y17 -to D5M_D[10]
+set_location_assignment PIN_AC21 -to D5M_D[9]
+set_location_assignment PIN_Y16 -to D5M_D[8]
+set_location_assignment PIN_AD21 -to D5M_D[7]
+set_location_assignment PIN_AE16 -to D5M_D[6]
+set_location_assignment PIN_AD15 -to D5M_D[5]
+set_location_assignment PIN_AE15 -to D5M_D[4]
+set_location_assignment PIN_AC19 -to D5M_D[3]
+set_location_assignment PIN_AF16 -to D5M_D[2]
+set_location_assignment PIN_AD19 -to D5M_D[1]
+set_location_assignment PIN_AF15 -to D5M_D[0]
+set_location_assignment PIN_AF25 -to D5M_XCLKIN
+set_location_assignment PIN_AC22 -to D5M_RESET_N
+set_location_assignment PIN_AF21 -to D5M_TRIGGER
+set_location_assignment PIN_AF22 -to D5M_STROBE
+set_location_assignment PIN_AD22 -to D5M_LVAL
+set_location_assignment PIN_AG25 -to D5M_FVAL
+set_location_assignment PIN_AD25 -to D5M_SDATA
+set_location_assignment PIN_AH25 -to D5M_SCLK
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
+set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
+set_global_assignment -name TIMEQUEST_DO_CCPP_REMOVAL ON
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -entity DE2_115_CAMERA -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -entity DE2_115_CAMERA -section_id Top
+set_global_assignment -name LL_ROOT_REGION ON -entity DE2_115_CAMERA -section_id "Root Region"
+set_global_assignment -name LL_MEMBER_STATE LOCKED -entity DE2_115_CAMERA -section_id "Root Region"
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -entity DE2_115_CAMERA -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity DE2_115_CAMERA -section_id Top
+set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
+set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name VERILOG_FILE RAW2RGB.v
+set_global_assignment -name VERILOG_FILE I2C_Controller.v
+set_global_assignment -name VERILOG_FILE I2C_CCD_Config.v
 set_global_assignment -name VHDL_FILE TwoPortRam.vhd
 set_global_assignment -name VHDL_FILE hexDisplay.vhd
 set_global_assignment -name VHDL_FILE ir_receiver.vhd
@@ -607,4 +658,6 @@ set_global_assignment -name VHDL_FILE CameraTracking.vhd
 set_global_assignment -name CDF_FILE Chain1.cdf
 set_global_assignment -name VHDL_FILE servo.vhd
 set_global_assignment -name QIP_FILE TwoPortRam.qip
+set_global_assignment -name QIP_FILE clock1.qip
+set_global_assignment -name VERILOG_FILE Line_Buffer1.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
