--- a/CameraTracking.qsf
+++ b/CameraTracking.qsf
@@ -646,6 +646,7 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity DE2_115_CAMERA -section_id Top
 set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name VERILOG_FILE CCD_Capture.v
 set_global_assignment -name VERILOG_FILE RAW2RGB.v
 set_global_assignment -name VERILOG_FILE I2C_Controller.v
 set_global_assignment -name VERILOG_FILE I2C_CCD_Config.v
@@ -660,4 +661,6 @@ set_global_assignment -name VHDL_FILE servo.vhd
 set_global_assignment -name QIP_FILE TwoPortRam.qip
 set_global_assignment -name QIP_FILE clock1.qip
 set_global_assignment -name VERILOG_FILE Line_Buffer1.v
+set_global_assignment -name SOURCE_FILE VGA_Pram.h
+set_global_assignment -name SOURCE_FILE VGA_Param.h
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
