--- a/CameraTracking.qsf
+++ b/CameraTracking.qsf
@@ -658,4 +658,5 @@ set_global_assignment -name QIP_FILE TwoPortRam.qip
 set_global_assignment -name QIP_FILE clock1.qip
 set_global_assignment -name VHDL_FILE CCD_Capture.vhd
 set_global_assignment -name VHDL_FILE BayerToRGBvhd.vhd
+set_global_assignment -name QIP_FILE LineMemory.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
