--- a/CameraTracking.qsf
+++ b/CameraTracking.qsf
@@ -646,7 +646,10 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity DE2_115_CAMERA -section_id Top
 set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name VHDL_FILE IR/hexDisplay.vhd
+set_global_assignment -name VHDL_FILE IR_Servo.vhd
+set_global_assignment -name VHDL_FILE IR_S.vhd
+set_global_assignment -name VHDL_FILE ir_receiver_servo.vhd
+set_global_assignment -name VHDL_FILE hexDisplay.vhd
 set_global_assignment -name VHDL_FILE TwoPortRam.vhd
 set_global_assignment -name VHDL_FILE ir_receiver.vhd
 set_global_assignment -name VHDL_FILE vga_driver.vhd
